Ajustando readme, Ajustando configuracao CORS e serviço de login no frontend